@@ -1,3 +1,10 @@
+3871.	[bug]		Don't publish an activated key automatically before
+			its publish time. [RT #35063]
+
+3870.	[placeholder]
+
+3869.	[placeholder]
+
 3868.	[bug]		isc_mem_setwater incorrectly cleared hi_called
 			potentially leaving over memory cleaner running.
 			[RT #35270]
